--- a/patient-webapp/src/main/webapp/resources/theme-default/css/main.css
+++ b/patient-webapp/src/main/webapp/resources/theme-default/css/main.css
@@ -1,4 +1,35 @@
-html,body{
-	margin: 0px;
-	padding: 0px;
+body {
+	background-color: white;
+}
+
+div.login-container {
+	width: 50%;
+	height: 50%;
+	min-width: 200px;
+	max-width: 400px;
+	margin: auto;
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+}
+
+div.login-container form {
+	background-color: #F4F7FF;
+	padding: 20px;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+	-webkit-box-shadow: 0px 5px 40px -2px rgba(0, 0, 0, 0.75);
+	-moz-box-shadow: 0px 5px 40px -2px rgba(0, 0, 0, 0.75);
+	box-shadow: 0px 5px 40px -2px rgba(0, 0, 0, 0.75);
+	border: 1px solid gray;
+}
+.version{
+	font-size: 10px;
+	color: gray;
+}
+.form-error{
+	display: none;
 }
